FIX: update styles

--- a/src/styles/partials/_colors.scss
+++ b/src/styles/partials/_colors.scss
@@ -7,3 +7,23 @@ $blue-light: #90ADC6;
 
 $green-sucess: #8FDA58;
 $red-error: #F8635A;
+
+/* Pokémon types colors */
+$pokemon-type-bug: #89960B;
+$pokemon-type-fairy: #DA93DD;
+$pokemon-type-ghost: #AD6EEC;
+$pokemon-type-normal: #C3C0B8;
+$pokemon-type-steel: #8F8E9E;
+$pokemon-type-ice: #9BDEFB;
+$pokemon-type-dark: #322C26;
+$pokemon-type-fighting: #80311D;
+$pokemon-type-grass: #68BB2B;
+$pokemon-type-poison: #924694;
+$pokemon-type-water: #5CC1ED;
+$pokemon-type-flying: #5D74D5;
+$pokemon-type-dragon: #5D74D5;
+$pokemon-type-fire: #5D74D5;
+$pokemon-type-ground: #D0B155;
+$pokemon-type-psychic: #DA3063;
+$pokemon-type-eletric: #F4CB38;
+$pokemon-type-rock: #9D853C;
