--- a/src/pages/teams.module.scss
+++ b/src/pages/teams.module.scss
@@ -34,10 +34,24 @@
   .pokemonTeamRow:nth-of-type(2) {
     margin-left: 5rem;
   }
+  
+  @media screen and (max-width: 600px) {
+    .pokemonTeamRow {
+      flex-wrap: wrap;
+    }
+
+    .pokemonTeamRow:nth-of-type(2) {
+      margin-left: 0rem;
+    }
+  }
 
   .pokemonTeamItem {
-    display: flex;
-    flex-direction: column;
+    
+    .pokemonTeamPokeball {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+    }
   
     img {
       min-width: 150px;
@@ -45,6 +59,14 @@
   
     img:nth-of-type(2) {
       margin-top: 6px;
+    }
+
+    .pokemonInTeamPokeballImage {
+      max-width: 50px;
+    }
+
+    .pokemonInTeamPokeball {
+      position: absolute;
     }
   }
 
@@ -54,9 +76,6 @@
     gap: 13px;
     font-size: 15px;
     color: $white;
-
-    .teamOptionsIcon {
-    }
     
     .trashIcon {
       background-color: $red-error;
@@ -87,7 +106,8 @@
     gap: 30px;
     padding-bottom: 25px;
 
-    .pokemonItem {    
+    .pokemonItem {
+      cursor: pointer;    
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -96,9 +116,12 @@
         background-color: $blue-light;
         border-radius: 100px;
         color: $white;
-        padding: 10px;
-        margin: auto 0;
+        min-height: 36px;
+        min-width: 36px;
         align-self: flex-start;
+        display: flex;
+        justify-content: center;
+        align-items: center;
       }
 
       img {
@@ -115,6 +138,10 @@
         height: 3px;
         align-self: flex-start;
         margin-top: 8px;
+      }
+
+      .pokemonBarColor {
+
       }
     }
   }
