FEAT: update components

--- a/src/styles/partials/_colors.scss
+++ b/src/styles/partials/_colors.scss
@@ -21,8 +21,8 @@ $pokemon-type-grass: #68BB2B;
 $pokemon-type-poison: #924694;
 $pokemon-type-water: #5CC1ED;
 $pokemon-type-flying: #5D74D5;
-$pokemon-type-dragon: #5D74D5;
-$pokemon-type-fire: #5D74D5;
+$pokemon-type-dragon: #6B57D2;
+$pokemon-type-fire: #EC5D35;
 $pokemon-type-ground: #D0B155;
 $pokemon-type-psychic: #DA3063;
 $pokemon-type-eletric: #F4CB38;
