--- a/src/components/PokemonTeam/styles.module.scss
+++ b/src/components/PokemonTeam/styles.module.scss
@@ -9,7 +9,11 @@
     min-width: 150px;
   }
 
-  img:nth-of-type(2) {
+  svg {
+    min-width: 150px;
+  }
+
+  img:nth-of-type(1) {
     margin-top: 6px;
   }
 
