FEAT: finished frontend

--- a/src/pages/teams.module.scss
+++ b/src/pages/teams.module.scss
@@ -17,6 +17,14 @@
 
   .sectionTitleIcon {
     color: $black;
+    cursor: pointer;
+    transition: .5s ease;
+
+    &:hover {
+      &:hover {
+        filter: brightness(1.5);
+      }
+    }
   }
 }
 
